Added VerifyToken View

--- a/client/src/style/_utilities.scss
+++ b/client/src/style/_utilities.scss
@@ -33,6 +33,7 @@ $grey-accent: #757575;
 }
 .text-primary{color: $primary-color}
 .text-secondary{color: $secondary-color}
+.text-danger{color: #d03f3f}
 .bg-primary{background: $primary-color}
 .bg-secondary{background: $secondary-color}
 .text-center{text-align: center;}
