--- a/client/src/style/_Form.scss
+++ b/client/src/style/_Form.scss
@@ -11,7 +11,18 @@
     }
     .input-container{
         margin-bottom: 0.5rem;
-        
+        .ngFlag{
+            position: relative;
+            img{
+                width: 25px;
+                height: auto;
+                position: absolute;
+
+            }
+            input{
+                padding-left: 30px;
+            }
+        }
         label{
             display: block;
             // margin-top: 0.3rem;
