--- a/client/src/style/_Loader.scss
+++ b/client/src/style/_Loader.scss
@@ -4,8 +4,9 @@
     width: 100vw;
     justify-content: center;
     align-items: center;
+    position: fixed;
     .spinner{
-        border: 7px solid white;
+        //border: 7px solid white;
         height: 50px;
         width: 50px;
         border-radius: 50%;
