--- a/client/src/style/_Nav.scss
+++ b/client/src/style/_Nav.scss
@@ -104,7 +104,12 @@
         text-align: center;
         font-size: 0.65rem;
         border-radius: 50%;
+
+        //padding: 0.2rem;
         top: -12px;
+        //display: flex;
+        //align-items: center;
+        //justify-content: center;
       }
       .sign-up {
         color: white;
