--- a/client/src/style/_Order.scss
+++ b/client/src/style/_Order.scss
@@ -31,6 +31,10 @@
             .right{
                 width: 25%;
                 height: fit-content;
+                .form-error{
+                    color: red;
+                    font-size: 0.8rem;
+                }
                 .address{
                     padding: 0.5rem 0.5rem;
                     margin-bottom: 1rem;
@@ -71,11 +75,18 @@
                         justify-content: space-between;
                         margin: 0.25rem 0;
                     }
+                    .info{
+                        font-size: 0.75rem;
+                        margin-top: 1rem;
+                        span{
+                            color: red;
+                        }
+                    }
                 }
                 .help{
                     margin-top: 1rem;
                     padding: 0.5rem 0.5rem;
-                    button{
+                    .talk-to-us{
                         width: 80%;
                         display: block;
                         margin: 0.5rem auto;
@@ -87,6 +98,12 @@
                         font-size: 1rem;
                         font-weight: bold;
                         cursor: pointer;
+                        text-align: center;
+                        i{
+                            color: $primary-color;
+                            margin-right: 0.5rem;
+                            font-size: 1.2rem;
+                        }
                     }
                 }
                 .place-order{
